<resources>
    <!-- ACRONYM
        - a:    activity
        - d:    dialog
        - sp:   shared preference
     -->

    <string name="app_name">Tinnitus Relief</string>

    <string name="a_main_title">Tinnitus Relief</string>
    <string name="a_main_btn_play">Play</string>
    <string name="a_main_btn_help">Help</string>
    <string name="a_main_btn_music">Music</string>
    <string name="a_main_music_title">Relaxing with music!</string>
    <string name="a_main_hint">Take a tour how to play!</string>

    <string name="d_btn_cancel">Cancel</string>

    <string name="d_gamefailed_msg">Sorry! You failed.</string>
    <string name="d_gamefailed_btn_action">Replay</string>

    <string name="d_gamesuccess_msg">Congrats! Good job.</string>
    <string name="d_gamesuccess_btn_action">Next</string>

    <string name="d_gamepause_msg">Game paused.</string>
    <string name="d_gamepause_btn_action">Resume</string>

    <string name="d_pregame_msg">Remember this sound and find it</string>
    <string name="d_pregame_btn_cancel">Go</string>
    <string name="d_pregame_btn_action">Again</string>

    <string name="a_gameselection_recycleritem_level">Level</string>
    <string name="a_gameselection_recycleritem_btn_play">Play</string>

    <string name="a_gameplay_msg_no_sensor">Sorry! Your device does not have motion sensor.</string>
    <string name="a_gameplay_btn_select">Select</string>

    <string name="sp_is_opened">IS_OPENED</string>

    <string name="a_howto_btn_skip">Skip</string>
    <string name="a_howto_btn_next">Next</string>
    <string name="a_howto_btn_gotit">Got it</string>
    <string name="a_howto_intent_from_help">FROM_HELP</string>
    <string name="a_howto_quote_1">Wear your headphone</string>
    <string name="a_howto_quote_2">Listen</string>
    <string name="a_howto_quote_3">Switch game mode</string>
    <string name="a_howto_quote_4">Touch mode</string>
    <string name="a_howto_quote_5">Motion mode</string>
    <string name="a_howto_quote_6">Select</string>
    <string name="a_howto_quote_7">Enjoy the game</string>
    <string name="a_howto_detail_1">You need to wear headphone to locate\nwhere the sound is</string>
    <string name="a_howto_detail_2">Listen carefully, you need to find this sound</string>
    <string name="a_howto_detail_3">Tap the button to switch between touch mode\nand motion mode</string>
    <string name="a_howto_detail_4">Dragging the screen to locate the sound</string>
    <string name="a_howto_detail_5">Moving your device to locate the sound</string>
    <string name="a_howto_detail_6">Tap this button to select the sound position</string>
    <string name="a_howto_detail_7">Now you know how to play. Let\'s play!</string>

    <string name="a_gameresult_btn_cancel">Cancel</string>
    <string name="a_gameresult_btn_next">Next</string>
    <string name="a_gameresult_btn_replay">Replay</string>
    <string name="a_gameresult_msg_success">Congrats! Good job.</string>
    <string name="a_gameresult_msg_failed">Sorry! You failed.</string>
    <string name="a_gameresult_msg_timeup">Sorry! Time up.</string>
    <string name="a_gameresult_msg_target">Target is here</string>

    <string name="d_music_txt_title">Set time to turn off the sound</string>
    <string name="d_music_txt_use_timer">Use timer</string>
    <string name="d_music_txt_minute">minutes</string>

</resources>
