<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="k2013.fit.hcmus.thesis.id539621.activity.MainActivity"
    android:background="@drawable/background_gradient_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/a_main_title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/themeLight"
            android:textSize="40sp" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_margin="0dp"
            android:background="@color/themeLight" />

        <Button
            android:id="@+id/main_btn_play"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/a_main_btn_play"
            android:onClick="mainOnClick"
            android:stateListAnimator="@null"
            android:text="@string/a_main_btn_play"
            android:textAllCaps="false"
            android:textColor="@drawable/a_main_text_play"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/a_main_music_title"
            android:textColor="@color/themeLight"
            android:textSize="12sp" />

        <Button
            android:id="@+id/main_btn_help"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/a_main_btn_help"
            android:onClick="mainOnClick"
            android:stateListAnimator="@null"
            android:text="@string/a_main_btn_music"
            android:textAllCaps="false"
            android:textColor="@color/themeLight"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>
