<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:gravity="center"
    android:background="@drawable/background_rounded">

    <TextView
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/d_music_txt_title"
        android:textStyle="bold"
        android:textColor="@color/themePrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/d_music_txt_use_timer"/>

        <Switch
            android:id="@+id/d_music_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/d_music_group_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <SeekBar
            android:id="@+id/d_music_seekbar"
            android:layout_width="272dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/d_music_txt_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/d_music_txt_minute"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>